<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="153dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="154dp"
        android:text="@string/evaluation_cuisinier"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="80dp"
        android:text="@string/veuillez_chosir_une_note_entre_1_et_5"
        android:textSize="16sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="100dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/MauvaisService"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_1_mauvais_service" />

        <RadioButton
            android:id="@+id/Passable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_2_passable" />

        <RadioButton
            android:id="@+id/Correct"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_3_correct" />

        <RadioButton
            android:id="@+id/Bon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_4_bon" />

        <RadioButton
            android:id="@+id/Excellent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_5_excellent" />

        <EditText
            android:id="@+id/Explication"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            android:minHeight="48dp"
            android:text="@string/pouvez_vous_nous_dire_pourquoi"
            android:importantForAutofill="no" />
    </LinearLayout>

    <Button
        android:id="@+id/retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="17dp"
        android:text="@string/retour"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>